Rozpoczecie prac nad wersja mobilna

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="flex justify-center">
-  <div class="flex justify-between items-center p-2 w-[91rem]">
+  <div class="flex justify-between items-center py-2 w-[91rem]">
     <a [routerLink]="ClientRoute.main">
       <img class="h-[5rem]" src="assets/logo.png" alt="logo" />
     </a>
