--- a/src/app/components/settings/categories/category-list/category-list.component.html
+++ b/src/app/components/settings/categories/category-list/category-list.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="border-t"></div>
   <app-grid
-    [columns]="getColumns()"
+    [columns]="columns"
     [idName]="'id'"
     [items]="categories()"
     [isDetailAction]="true"
