--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,6 +1,6 @@
-<div class="flex h-full">
+<div class="flex h-full gap-4">
   <app-settings-aside></app-settings-aside>
-  <div class="w-full h-full px-4">
+  <div class="w-full h-full">
     <router-outlet></router-outlet>
   </div>
 </div>
