--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col h-screen w-screen">
-  <app-nav></app-nav>
-  <main class="flex justify-center h-full">
-    <div class="w-[91rem]">
+<div class="flex h-screen w-screen justify-center">
+  <div class="flex flex-1 flex-col max-w-[91rem] overflow-hidden">
+    <app-nav></app-nav>
+    <main class="flex-1">
       <router-outlet></router-outlet>
-    </div>
-  </main>
+    </main>
+  </div>
 </div>
