--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,48 +1,44 @@
-<nav class="flex justify-center">
-  <div class="flex justify-between items-center py-2 w-[91rem]">
-    <a [routerLink]="ClientRoute.main">
-      <img class="h-[5rem]" src="assets/logo.png" alt="logo" />
-    </a>
-    <div>
-      <div class="flex">
-        <app-nav-button
-          [iconName]="IconType.globeAlt"
-          label="{{ 'nav-component.language' | translate }}"
-          (mouseenter)="setDropdownLanguageVisible()"
-          (mouseleave)="setDropdownLanguageVisible()">
-          <app-drop-down-list
-            [isVisible]="isDropdownLanguageVisible()"
-            [items]="langItems()"
-            (onItemClick)="changeLang($event)">
-          </app-drop-down-list>
-        </app-nav-button>
-        <app-nav-button
-          [iconName]="IconType.shoppingBag"
-          label="{{ 'nav-component.basket' | translate }}"></app-nav-button>
-        <app-nav-button
-          [iconName]="IconType.heart"
-          label="{{ 'nav-component.favourite' | translate }}"></app-nav-button>
-        <app-nav-button
-          [iconName]="IconType.userCircle"
-          label="{{ 'nav-component.account' | translate }}"
-          (mouseenter)="setDropdownAccountVisible(true)"
-          (mouseleave)="setDropdownAccountVisible(false)">
-          <app-drop-down-list [isVisible]="isDropdownAccountVisible()" [orientation]="DropDownListOrientation.right">
+<nav class="flex justify-between items-center py-2">
+  <a [routerLink]="ClientRoute.main">
+    <img class="h-[5rem]" src="assets/logo.png" alt="logo" />
+  </a>
+  <div>
+    <div class="flex">
+      <app-nav-button
+        [iconName]="IconType.globeAlt"
+        label="{{ 'nav-component.language' | translate }}"
+        (mouseenter)="setDropdownLanguageVisible()"
+        (mouseleave)="setDropdownLanguageVisible()">
+        <app-drop-down-list
+          [isVisible]="isDropdownLanguageVisible()"
+          [items]="langItems()"
+          (onItemClick)="changeLang($event)">
+        </app-drop-down-list>
+      </app-nav-button>
+      <app-nav-button
+        [iconName]="IconType.shoppingBag"
+        label="{{ 'nav-component.basket' | translate }}"></app-nav-button>
+      <app-nav-button [iconName]="IconType.heart" label="{{ 'nav-component.favourite' | translate }}"></app-nav-button>
+      <app-nav-button
+        [iconName]="IconType.userCircle"
+        label="{{ 'nav-component.account' | translate }}"
+        (mouseenter)="setDropdownAccountVisible(true)"
+        (mouseleave)="setDropdownAccountVisible(false)">
+        <app-drop-down-list [isVisible]="isDropdownAccountVisible()" [orientation]="DropDownListOrientation.right">
+          <app-drop-down-list-item
+            [item]="{ id: '1', value: 'nav-component.settings' | translate }"
+            routerLink="settings"></app-drop-down-list-item>
+          @if (isSignedIn$ | async) {
             <app-drop-down-list-item
-              [item]="{ id: '1', value: 'nav-component.settings' | translate }"
-              routerLink="settings"></app-drop-down-list-item>
-            @if (isSignedIn$ | async) {
-              <app-drop-down-list-item
-                [item]="{ id: '2', value: 'nav-component.logout' | translate }"
-                (onItemClick)="logout()"></app-drop-down-list-item>
-            } @else {
-              <app-drop-down-list-item
-                [item]="{ id: '2', value: 'nav-component.sign-in' | translate }"
-                (onItemClick)="login()"></app-drop-down-list-item>
-            }
-          </app-drop-down-list>
-        </app-nav-button>
-      </div>
+              [item]="{ id: '2', value: 'nav-component.logout' | translate }"
+              (onItemClick)="logout()"></app-drop-down-list-item>
+          } @else {
+            <app-drop-down-list-item
+              [item]="{ id: '2', value: 'nav-component.sign-in' | translate }"
+              (onItemClick)="login()"></app-drop-down-list-item>
+          }
+        </app-drop-down-list>
+      </app-nav-button>
     </div>
   </div>
 </nav>
