--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="flex h-full gap-4">
   <app-settings-aside></app-settings-aside>
-  <div class="w-full h-full">
+  <div class="flex-1 overflow-hidden">
     <router-outlet></router-outlet>
   </div>
 </div>
