--- a/src/app/components/shared/icon/icon.component.html
+++ b/src/app/components/shared/icon/icon.component.html
@@ -49,6 +49,20 @@
       <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
     </svg>
   }
+  @case (IconType.ellipsisHorizontal) {
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      [class]="iconStyle">
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M6.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM12.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM18.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+    </svg>
+  }
   @case (IconType.envelope) {
     <svg
       xmlns="http://www.w3.org/2000/svg"
