--- a/src/app/components/shared/grid/grid.component.html
+++ b/src/app/components/shared/grid/grid.component.html
@@ -5,15 +5,17 @@
         @for (column of columns; track column) {
           @switch (column.template) {
             @case (GridTemplate.action) {
-              <th class="p-0 sticky right-0 z-10 bg-green-300">
-                <div class="flex justify-center items-center p-2  {{ actionColumnWidth() }}">
-                  <app-icon [iconName]="IconType.ellipsisHorizontal"></app-icon>
+              <th class="h-11 p-0 sticky right-0 z-10 bg-green-300">
+                <div class="flex h-full border-l border-gray-400">
+                  <div class="flex flex-1 justify-center items-center p-2  {{ actionColumnWidth() }}">
+                    <app-icon [iconName]="IconType.ellipsisHorizontal"></app-icon>
+                  </div>
                 </div>
               </th>
             }
             @default {
-              <th class="p-0 bg-green-300">
-                <div class="flex justify-center items-center al p-2">
+              <th class="h-11 p-0 bg-green-300">
+                <div class="flex justify-center items-center p-2">
                   <p class="font-medium text-xl text-nowrap">
                     {{ column.headerText | translate }}
                   </p>
@@ -26,43 +28,51 @@
     </thead>
     <tbody (mouseleave)="rowId = ''">
       @for (item of items; track item) {
-        <tr class="h-11 bg-white hover:bg-green-50" (mouseover)="rowId = item.id">
+        <tr class="bg-white hover:bg-green-50" (mouseover)="rowId = item.id">
           @for (column of columns; track column) {
             @switch (column.template) {
               @case (GridTemplate.action) {
-                <td class="p-2 sticky right-0 z-10 bg-inherit">
-                  <div class="flex justify-center {{ actionColumnWidth() }}">
-                    <app-grid-action-field
-                      class="{{ rowId == item.id ? 'block' : 'hidden' }}"
-                      [id]="item.id"
-                      [isDetailAction]="isDetailAction"
-                      [isEditAction]="isEditAction"
-                      [isRemoveAction]="isRemoveAction"
-                      (onDetailAction)="detailAction($event)"
-                      (onEditAction)="editAction($event)"
-                      (onRemoveAction)="removeAction($event)">
-                    </app-grid-action-field>
+                <td class="h-11 p-0 sticky right-0 z-10 bg-inherit {{ actionColumnWidth() }}">
+                  <div class="flex h-full p-2 border-l border-gray-400">
+                    <div class="flex flex-1 justify-center items-center">
+                      <app-grid-action-field
+                        class="{{ rowId == item.id ? 'block' : 'hidden' }}"
+                        [id]="item.id"
+                        [isDetailAction]="isDetailAction"
+                        [isEditAction]="isEditAction"
+                        [isRemoveAction]="isRemoveAction"
+                        (onDetailAction)="detailAction($event)"
+                        (onEditAction)="editAction($event)"
+                        (onRemoveAction)="removeAction($event)">
+                      </app-grid-action-field>
+                    </div>
                   </div>
                 </td>
               }
               @case (GridTemplate.boolean) {
-                <td class="p-2">
-                  <div class="flex justify-center">
-                    <app-grid-boolean-field [value]="item[column.field]"></app-grid-boolean-field>
+                <td class="h-11 p-0">
+                  <div class="flex h-full p-2">
+                    <div class="flex flex-1 justify-center items-center">
+                      <app-grid-boolean-field [value]="item[column.field]"></app-grid-boolean-field>
+                    </div>
                   </div>
                 </td>
               }
               @case (GridTemplate.text) {
-                <td class="p-2">
-                  <div class="flex justify-center">
-                    <app-grid-text-field [value]="item[column.field]"></app-grid-text-field>
+                <td class="h-11 p-0">
+                  <div class="flex h-full p-2">
+                    <div class="flex flex-1 justify-center items-center">
+                      <app-grid-text-field [value]="item[column.field]"></app-grid-text-field>
+                    </div>
                   </div>
                 </td>
               }
               @default {
-                <td class="p-2">
-                  <div class="flex justify-center">
-                    {{ item[column.field] }}
+                <td class="h-11 p-0">
+                  <div class="flex h-full p-2">
+                    <div class="flex flex-1 justify-center items-center">
+                      {{ item[column.field] }}
+                    </div>
                   </div>
                 </td>
               }
