--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -12,7 +12,7 @@
             </app-icon>
           }
         </div>
-        <p class="w-full text-xl text-center whitespace-normal overflow-auto break-words">{{ header }}</p>
+        <p class="w-full text-xl text-center whitespace-normal overflow-auto break-words">{{ header() }}</p>
         <app-icon
           class="min-w-7 max-w-7 min-h-7 max-h-7 p-1 ml-2 cursor-pointer hover:bg-green-400 hover:rounded"
           iconStyle="w-5 h-5"
@@ -21,7 +21,7 @@
         </app-icon>
       </div>
       <div class="h-full border-r">
-        @for (item of items; track item.id) {
+        @for (item of items(); track item.id) {
           <div class="flex items-center hover:bg-green-50">
             <a
               class="block py-2 pl-2 overflow-hidden text-ellipsis cursor-pointer w-full whitespace-nowrap md:whitespace-nowrap"
