--- a/src/app/components/shared/button/button.component.html
+++ b/src/app/components/shared/button/button.component.html
@@ -1,3 +1,3 @@
 <div class="flex justify-center">
-  <button class="p-2 border rounded-md {{ width }} {{ initLayout() }}" [disabled]="disabled">{{ label }}</button>
+  <button class="p-2 border rounded-md {{ width() }} {{ initLayout() }}" [disabled]="disabled()">{{ label() }}</button>
 </div>
