--- a/src/app/components/shared/drop-down-list/drop-down-list-item/drop-down-list-item.component.html
+++ b/src/app/components/shared/drop-down-list/drop-down-list-item/drop-down-list-item.component.html
@@ -1,5 +1,3 @@
-@if (item) {
-  <a class="block w-full cursor-pointer p-2 hover:bg-green-300 whitespace-nowrap" (click)="action()">
-    {{ item.value | translate }}
-  </a>
-}
+<a class="block w-full cursor-pointer p-2 hover:bg-green-300 whitespace-nowrap" (click)="action()">
+  {{ item().value | translate }}
+</a>
