--- a/src/app/components/shared/grid/grid-field-templates/grid-text-field/grid-text-field.component.html
+++ b/src/app/components/shared/grid/grid-field-templates/grid-text-field/grid-text-field.component.html
@@ -1,5 +1,5 @@
-@if (value) {
-  <p>{{ value }}</p>
+@if (value()) {
+  <p>{{ value() }}</p>
 } @else {
   <app-icon [iconName]="IconType.minus"></app-icon>
 }
