--- a/src/app/components/shared/icon/icon.component.html
+++ b/src/app/components/shared/icon/icon.component.html
@@ -1,4 +1,4 @@
-@switch (iconName) {
+@switch (iconName()) {
   @case (IconType.arrowDownCircle) {
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -6,7 +6,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -20,7 +20,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
     </svg>
   }
@@ -31,7 +31,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -45,7 +45,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
     </svg>
   }
@@ -56,7 +56,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -70,7 +70,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -84,7 +84,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -99,7 +99,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -113,7 +113,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -127,7 +127,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14" />
     </svg>
   }
@@ -138,7 +138,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
     </svg>
   }
@@ -149,7 +149,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -163,7 +163,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -177,7 +177,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -191,7 +191,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -205,7 +205,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -219,7 +219,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -233,7 +233,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -247,7 +247,7 @@
       viewBox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
-      [class]="iconStyle">
+      [class]="iconStyle()">
       <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
     </svg>
   }
