--- a/src/app/components/shared/input-select/input-select.component.html
+++ b/src/app/components/shared/input-select/input-select.component.html
@@ -1,17 +1,19 @@
 <div class="relative pb-6">
   <label class="block my-1">
-    {{ label }}
-    @if (required) {
+    {{ label() }}
+    @if (required()) {
       <sup class="text-red-600">*</sup>
     }
   </label>
   <div #selectBox class="relative cursor-pointer">
     <div
-      class="border rounded-md p-2 w-full h-[2.625rem] {{ errorCode ? 'border-red-600' : '' }}"
-      (click)="setVisible()">
-      <p>{{ selectedItem.value | translate }}</p>
+      class="border rounded-md p-2 w-full h-[2.625rem] 
+      {{ isFocus() ? 'border-blue-600' : '' }} 
+      {{ errorCode() ? 'border-red-600' : '' }}"
+      (click)="onClick()">
+      <p>{{ selectedItem().value | translate }}</p>
     </div>
-    @if (isDropdownVisible) {
+    @if (isDropdownVisible()) {
       <div class="absolute z-10 border rounded-md w-full bg-white">
         @for (dropdownItem of dropdownItems; track dropdownItem.id) {
           <div class="p-2 hover:bg-green-50" (click)="setItem(dropdownItem)">
@@ -21,7 +23,7 @@
       </div>
     }
   </div>
-  @if (errorCode) {
-    <span class="absolute text-red-600">{{ errorCode | translate }}</span>
+  @if (errorCode()) {
+    <span class="absolute text-red-600">{{ errorCode() ?? '' | translate }}</span>
   }
 </div>
