--- a/src/app/components/shared/input/input.component.html
+++ b/src/app/components/shared/input/input.component.html
@@ -1,20 +1,20 @@
 <div class="relative pb-6">
   <label class="block my-1">
-    {{ label }}
-    @if (required) {
+    {{ label() }}
+    @if (required()) {
       <sup class="text-red-600">*</sup>
     }
   </label>
   <input
     #input
-    class="block border rounded-md p-2 w-full {{ errorCode ? 'border-red-600' : '' }}"
-    [placeholder]="placeholder"
-    [type]="type"
-    [value]="value"
-    [autocomplete]="autocomplete"
+    class="block border rounded-md p-2 w-full focus:border-blue-600 {{ errorCode() ? 'border-red-600' : '' }}"
+    [placeholder]="placeholder()"
+    [type]="type()"
+    [value]="value()"
+    [autocomplete]="autocomplete()"
     (change)="onValueChange(input)"
     (blur)="onValueChange(input)" />
-  @if (errorCode) {
-    <span class="absolute text-red-600">{{ errorCode | translate }}</span>
+  @if (errorCode()) {
+    <span class="absolute text-red-600">{{ errorCode() ?? '' | translate }}</span>
   }
 </div>
