Dodanie paginacji do kategorii

--- a/src/app/components/settings/categories/category-list/category-list.component.html
+++ b/src/app/components/settings/categories/category-list/category-list.component.html
@@ -16,4 +16,5 @@
     (onEditAction)="navigateToEdit($event)"
     (onRemoveAction)="removeRecord($event)">
   </app-grid>
+  <app-grid-pagination [model]="pagination()" (onPageClick)="changePage($event)"> </app-grid-pagination>
 </div>
