Dodanie formatki z bazą produktów i refaktoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen w-screen justify-center">
-  <div class="flex flex-1 flex-col max-w-[91rem] overflow-hidden">
+  <div class="flex flex-auto flex-col max-w-364">
     <app-nav></app-nav>
-    <main class="flex-1">
+    <main class="flex-auto overflow-hidden">
       <router-outlet></router-outlet>
     </main>
   </div>
