--- a/src/app/components/settings/product-base/product-base-list/product-base-list.component.html
+++ b/src/app/components/settings/product-base/product-base-list/product-base-list.component.html
@@ -1,7 +1,9 @@
 <div class="flex flex-col h-full gap-4">
   <div class="flex justify-between items-center h-11">
-    <h1 class="text-xl">{{ 'category-list-component.categories' | translate }}</h1>
-    <app-button [label]="'category-list-component.create-new-category' | translate" (click)="navigateToCreate()">
+    <h1 class="text-xl">{{ 'product-base-list-component.products-bases' | translate }}</h1>
+    <app-button
+      [label]="'product-base-list-component.create-new-product-base' | translate"
+      (click)="navigateToCreate()">
     </app-button>
   </div>
   <div class="border-t"></div>
@@ -9,7 +11,7 @@
     <app-table
       [columns]="columns"
       [idName]="'id'"
-      [items]="categories()"
+      [items]="productBases()"
       [isEditAction]="true"
       [isRemoveAction]="true"
       [page]="pagination()"
