--- a/src/app/components/settings/categories/category-form/category-form-dialog-window-content/category-form-dialog-window-content.component.html
+++ b/src/app/components/settings/categories/category-form/category-form-dialog-window-content/category-form-dialog-window-content.component.html
@@ -1,3 +1,3 @@
 <form [formGroup]="form">
-  <app-input-select [items]="items()" formControlName="language"></app-input-select>
+  <app-input-select [items]="items()" formControlName="subCategory"></app-input-select>
 </form>
