--- a/src/app/components/shared/modals/dialog-window/dialog-window.component.html
+++ b/src/app/components/shared/modals/dialog-window/dialog-window.component.html
@@ -2,7 +2,7 @@
   <div class="flex justify-center items-center w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur">
     <div class="bg-white min-w-80 min-h-40 p-4">
       <div class="flex justify-end">
-        <button (click)="closeDialog()">
+        <button (click)="this.onCloseDialog.emit(false)">
           <app-icon [iconName]="IconType.xMark"></app-icon>
         </button>
       </div>
