--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,6 @@
-<div class="flex h-full">
+<div class="flex h-full gap-4">
   <app-menu-aside></app-menu-aside>
-  <div class="p-4"></div>
+  <div class="flex-auto overflow-hidden">
+    <router-outlet></router-outlet>
+  </div>
 </div>
